kube/production/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: production  # or your namespace
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: neta-group
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:992382545251:certificate/9a25d155-a1a1-42a8-8d3b-8db8f2b85fd1
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb-ingress
  rules:
    - host: statuspage-neta-fred.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-server
                port:
                  number: 80
